crates/test-files/fixtures/compile_errors/assert_sto_msg_no_copy.fe
contract Foo:
    my_string: String<42>

    pub fn bar():
        assert false, self.my_string